# UITrans

./: .gitignore  README.md  config.yaml  demo2.py  demo3.py  global_data.json  main.ipynb  pyproject.toml  sqlite.db  temp.txt  test.py  ui.py
android/: base.py  layout_parser.py  main.py  proj_parser.py  util.py
core/agents/: base.py  llm_agent.py  retrieve_agent.py  schema.py
core/config/: config_loader.py  schema.py
core/db/: session.py
core/llms/: __init__.py  base.py  basic_client.py  llm_factory.py  oai_client.py
core/logger/: base_logger.py  file_logger.py  runtime.py  stream_logger.py
core/pilot/: code_monkey.py  developer.py  retrieve_agent.py  schema.py  tech_leader_agent.py
core/prompt/: __init__.py  prompt_loader.py
core/state/: agent_state.py  global_state.py  schema.py
core/tools/: file_tools.py  harmony_tools.py  search_tools.py
core/translator/: __init__.py  resource.py
core/utils/: function_utils.py
db/: sqlite.db
demos/GoGrocery/: page_data.json
demos/PSLab/: page_data.json
demos/Transportr/: page_data.json
demos/bookdash/: page_data.json  转译记录.md
demos/enjoyshop/: page_data.json
demos/forecastie/: page_data.json
examples/modified_examples/: example_1.ets  example_2.ets  example_3.ets
pages/: page_tasks.json
pages/results/: GoGrocery_temp_agent_task_app_src_main_res_layout_activity_category_wise_products.xml.json  GoGrocery_temp_agent_task_app_src_main_res_layout_activity_forget.xml.json  GoGrocery_temp_agent_task_app_src_main_res_layout_activity_home.xml.json  GoGrocery_temp_agent_task_app_src_main_res_layout_activity_login.xml.json  GoGrocery_temp_agent_task_app_src_main_res_layout_activity_otp_forget.xml.json  GoGrocery_temp_agent_task_app_src_main_res_layout_activity_product_detail.xml.json  GoGrocery_temp_agent_task_app_src_main_res_layout_activity_register.xml.json  (+30 more)
script/: auto_harmony_document.py  auto_harmony_document_v1.py  component_examples.py  initialize_database.py
template/: base.py  harmony_empty_ability.py  manager.py
tests/: code_monkey_test.py  test_code_monkey.py  test_config.py  test_developer.py  test_rag.py  test_rag1.py  test_reader.py  test_tech_leader.py  test_template.py
(+1044 files in other folders)
