[project]
name = "harmony-pilot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "王晨", email = "dawnwccc712@gmail.com"},
]
dependencies = [
    "colorlog>=6.8.2",
    "jinja2>=3.1.4",
    "openai>=1.35.10",
    "tenacity>=8.5.0",
    "pyyaml>=6.0.1",
    "pytest>=8.3.1",
    "jsonref>=1.1.0",
    "sentence-transformers==2.7.0",
    "torch>=2.4.0",
    "numpy==1.26.4",
    "langchain>=0.2.14",
    "langchain-qdrant>=0.1.3",
    "langchain-huggingface>=0.0.3",
    "einops>=0.8.0",
    "langchain-community>=0.2.12",
    "rank-bm25>=0.2.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
