[project]
name = "harmony-pilot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wang Chen", email = "dawnwccc712@gmail.com"},
]
dependencies = [
    "colorlog>=6.8.2",
    "jinja2>=3.1.4",
    "openai>=1.35.10",
    "tenacity>=8.5.0",
    "pyyaml>=6.0.1",
    "pytest>=8.3.1",
    "jsonref>=1.1.0",
    "sentence-transformers==3.0",
    "numpy==1.26.4",
    "langchain>=0.3.2",
    "langchain-huggingface>=0.1.0",
    "einops>=0.8.0",
    "langchain-community>=0.3.1",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5.5",
    "lxml>=5.3.0",
    "aiosqlite>=0.20.0",
    "pytest-asyncio>=0.24.0",
    "shortuuid>=1.0.13",
    "langchain-chroma>=0.1.4",
    "torch>=2.4.1",
    "gradio>=5.0.1",
    "xmltodict>=0.14.1",
    "pyparsing>=3.1.4",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false